--- a/Помощь/КонвертерИСФ/НазначениеПроекта.htm
+++ b/Помощь/КонвертерИСФ/НазначениеПроекта.htm
@@ -25,7 +25,18 @@
 </em>
 <H2>Интерфейс</H2>
 Пользовательский интерфейс проекта представляет собой форму (бланк) с таблицей выполнения этапов конвертации.
-Этапы должны выполняться последовательно, нарушение порядка не допускается.<p>Каждый этап конвертации
+Этапы конвертации объединены в группы. Запуск выполнения каждой группы этапов осуществляется с помощью
+группы кнопок "Запуск выполнения".
+<H2>Прядок выполнения конвертации (общие принципы)</H2>
+Большинство строк в таблице конвертации имеют кнопку обзора ("<b>...</b>"). Кнопка предназначена для вызова диалога
+настройки и (или) оценки результатов выполнения этапа конвертации. Если в диалоге настройки присутствует
+кнопка "<b>Применить</b>", то она запускает процесс выполнения выбранного этапа.
+<br>
+До подачи команды на выполнение группы все этапы, входящие в группу, должны быть настроены. При неполном
+выполнении этапа допускается возврат к его настройке (донастройке) и повторном выполнении.<p>
+Запуск выполнения групп этапов конвертации должн выполняться последовательно, нарушение порядка не допускается.
+Команда на выполнение каждой следующей группы этапов конвертации доступна после полного завершения предыущей.
+<p>Каждый этап конвертации
 имеет свои особенности, отраженные в "Помощи".
 Полностью автоматизировать процесс переноса данных невозможно из-за различия в архитектуре прикладных решений.
 <H2>Этапы конвертации</H2>
